...
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/loginBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@drawable/button_background"
            android:text="Login"
            android:textSize="20sp"
            android:textStyle="bold" />



<!--        <TextView-->
...
